[gd_scene load_steps=47 format=3 uid="uid://5oxw7xfd6tef"]

[ext_resource type="Script" path="res://Enemies/mage_key.gd" id="1_ge3ps"]
[ext_resource type="Texture2D" uid="uid://jq203io6cfhx" path="res://Enemies/Archer.png" id="1_ia4yk"]
[ext_resource type="Shader" path="res://Character/player.gdshader" id="1_kxbdg"]
[ext_resource type="Texture2D" uid="uid://buw1fjfii4jo1" path="res://Shadows/ShadowESC.png" id="2_vs5t7"]
[ext_resource type="PackedScene" uid="uid://we6jgigp3nt3" path="res://Overlap/hurtbox.tscn" id="3_r0r4q"]
[ext_resource type="Texture2D" uid="uid://dt3eurtwedr6t" path="res://Enemies/Staff.png" id="4_0wmxt"]
[ext_resource type="PackedScene" uid="uid://dqufs76284x12" path="res://stats.tscn" id="4_4gotu"]
[ext_resource type="PackedScene" uid="uid://weeimq81hmjw" path="res://Character/EnemyAttackRange.tscn" id="5_ao823"]
[ext_resource type="AudioStream" uid="uid://dqhsd3a2mvo5p" path="res://Audio/Fire/spellcast-46164.mp3" id="9_c2bg7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2pytg"]
resource_local_to_scene = true
shader = ExtResource("1_kxbdg")
shader_parameter/active = false

[sub_resource type="CircleShape2D" id="CircleShape2D_01tj8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x46gv"]
shader = ExtResource("1_kxbdg")
shader_parameter/active = false

[sub_resource type="Gradient" id="Gradient_21kff"]
offsets = PackedFloat32Array(0, 0.68)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_blbvm"]
gradient = SubResource("Gradient_21kff")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_osw1y"]
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5pijk"]
radius = 162.077

[sub_resource type="Animation" id="Animation_jfkhl"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_4cefm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_21fy3"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvmg8"]
_data = {
"Idle": SubResource("Animation_jfkhl"),
"RESET": SubResource("Animation_4cefm"),
"Run": SubResource("Animation_21fy3")
}

[sub_resource type="Animation" id="Animation_n4dfv"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_8m6a5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Staff/StaffPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_2fxdo"]
resource_name = "Raise"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0523599, 0.0, -0.0523599, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-0.5, -10), Vector2(0, -10), Vector2(0.5, -10), Vector2(0, -10)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_staff_hold"
}]
}

[sub_resource type="Animation" id="Animation_pysux"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -10), Vector2(0, -9), Vector2(0, -10), Vector2(0, -9)]
}

[sub_resource type="Animation" id="Animation_slch3"]
resource_name = "Shake"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff/StaffPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0349066, 0.0, -0.0349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -10), Vector2(0.5, -10), Vector2(0, -10), Vector2(-0.5, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Staff:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_nl464"]
resource_name = "Shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Staff/StaffPivot/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(3.13834, 0.267944, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, -7), Vector2(0, 1), Vector2(0, -2), Vector2(0, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_staff_reload"
}, {
"args": [],
"method": &"_shoot_projectile"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lw3h6"]
_data = {
"Idle": SubResource("Animation_n4dfv"),
"RESET": SubResource("Animation_8m6a5"),
"Raise": SubResource("Animation_2fxdo"),
"Run": SubResource("Animation_pysux"),
"Shake": SubResource("Animation_slch3"),
"Shoot": SubResource("Animation_nl464")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_evxg4"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sv1pp"]
animation = &"Raise"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22gsv"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jcc66"]
animation = &"Shake"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x2p4k"]
animation = &"Shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ubf3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kr8dn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k4r1i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ispsn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5kwx5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_67os8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lwxw8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xmv1o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rm8tk"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hp4q1"]
states/End/position = Vector2(1099, 48)
states/Idle/node = SubResource("AnimationNodeAnimation_evxg4")
states/Idle/position = Vector2(452, 100)
states/Raise/node = SubResource("AnimationNodeAnimation_sv1pp")
states/Raise/position = Vector2(764, 206)
states/Run/node = SubResource("AnimationNodeAnimation_22gsv")
states/Run/position = Vector2(675, 100)
states/Shake/node = SubResource("AnimationNodeAnimation_jcc66")
states/Shake/position = Vector2(675, 314)
states/Shoot/node = SubResource("AnimationNodeAnimation_x2p4k")
states/Shoot/position = Vector2(935, 200)
states/Start/position = Vector2(275, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_3ubf3"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_kr8dn"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_k4r1i"), "Run", "Raise", SubResource("AnimationNodeStateMachineTransition_ispsn"), "Raise", "Shake", SubResource("AnimationNodeStateMachineTransition_5kwx5"), "Shake", "Shoot", SubResource("AnimationNodeStateMachineTransition_67os8"), "Shoot", "Run", SubResource("AnimationNodeStateMachineTransition_lwxw8"), "Shake", "Run", SubResource("AnimationNodeStateMachineTransition_xmv1o"), "Shoot", "Raise", SubResource("AnimationNodeStateMachineTransition_rm8tk")]
graph_offset = Vector2(57, 86)

[sub_resource type="Animation" id="Animation_45128"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot/Sprite2D:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dd2ji"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot/Sprite2D:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kauro"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Staff/StaffPivot/Sprite2D:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bv4k0"]
_data = {
"RESET": SubResource("Animation_45128"),
"Start": SubResource("Animation_dd2ji"),
"Stop": SubResource("Animation_kauro")
}

[node name="mage_key" type="CharacterBody2D"]
z_index = 1
collision_layer = 7
collision_mask = 4
script = ExtResource("1_ge3ps")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2pytg")
texture = ExtResource("1_ia4yk")
hframes = 4
frame = 1

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(0.5, 12)
texture = ExtResource("2_vs5t7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("CircleShape2D_01tj8")
debug_color = Color(0, 0.6, 0.701961, 0.211765)

[node name="Staff" type="Node2D" parent="."]

[node name="StaffPivot" type="Marker2D" parent="Staff"]
position = Vector2(-10, 10)

[node name="Sprite2D" type="Sprite2D" parent="Staff/StaffPivot"]
material = SubResource("ShaderMaterial_x46gv")
position = Vector2(0, -10)
texture = ExtResource("4_0wmxt")

[node name="StaffPointPivot" type="Marker2D" parent="Staff"]
position = Vector2(-9.5, -8)

[node name="PointLight2D" type="PointLight2D" parent="Staff"]
position = Vector2(-9.5, -8)
scale = Vector2(0.494141, 0.494141)
color = Color(0.831373, 0.482353, 0.164706, 1)
texture = SubResource("GradientTexture2D_blbvm")

[node name="Hurtbox" parent="." instance=ExtResource("3_r0r4q")]
position = Vector2(0.5, 1)
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_osw1y")
debug_color = Color(0.996078, 0.0431373, 0, 0.188235)

[node name="EnemyAttackRange" parent="." instance=ExtResource("5_ao823")]
visible = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="EnemyAttackRange" index="0"]
shape = SubResource("CircleShape2D_5pijk")
debug_color = Color(0, 0.6, 0.701961, 0.176471)

[node name="stats" parent="." instance=ExtResource("4_4gotu")]
max_health = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_c2bg7")
volume_db = -25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_yvmg8")
}

[node name="StaffAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_lw3h6")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_lw3h6")
}
tree_root = SubResource("AnimationNodeStateMachine_hp4q1")
anim_player = NodePath("../StaffAnimationPlayer")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_bv4k0")
}

[node name="StaffHoldTimer" type="Timer" parent="."]
one_shot = true

[node name="StaffReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="StaffHoldTimer" to="." method="_on_staff_hold_timer_timeout"]
[connection signal="timeout" from="StaffReloadTimer" to="." method="_on_staff_reload_timer_timeout"]

[editable path="Hurtbox"]
[editable path="EnemyAttackRange"]
